/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
package dremio.catalog;

option java_package = "com.dremio.exec.catalog";
option optimize_for = SPEED;
option java_outer_classname = "CatalogInternalRPC";

import "google/protobuf/empty.proto";

/**
 * Service API for internal communication between CatalogService instances
 */
service CatalogServiceSynchronizer {
  rpc UpdateRefreshDate (UpdateLastRefreshDateRequest) returns (google.protobuf.Empty);
}

message UpdateLastRefreshDateRequest {
  int64 last_full_refresh_date_ms = 1;
  int64 last_names_refresh_date_ms = 2;
  string plugin_name = 3;
}
